feat: can show only date without time #12

--- a/src/AppBundle/Resources/translations/messages.fr.yml
+++ b/src/AppBundle/Resources/translations/messages.fr.yml
@@ -1,6 +1,7 @@
 form:
   labels:
     date: Date
+    is_date_only: N'afficher que la date, sans l'heure
     label: Label
     description: Description
     private: Privé ? *
